kubernetes/04_Service/external-service-externalname.yaml
kind: Service
apiVersion: v1
metadata:
  name:  externel-service
spec:
  type:  ExternalName
  externalName: someapi.example.com
  ports:
  - port:  80
