kubernetes/04_Service/kubia-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  tls:
  - hosts:
    - kubia.repository.pp.ua
    secretName: tls-secret-kubia
  rules:
  - host: kubia.repository.pp.ua
    http:
      paths:
      - path: /
        backend: 
          serviceName: kubia-nodeport
          servicePort: 80
